--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -8,6 +8,7 @@
 
 {% block styles %}
     <link rel="stylesheet" href="/styles/create-point.css">
+    <link rel="stylesheet" href="/styles/modal.css">
 {% endblock styles %}
 
 {% block content %}
@@ -39,10 +40,10 @@
 
             <div class="field-group">
                 <div class="field">
-                    <label for="address">Endereço</label><input type="text" name="adddress" required="required">
+                    <label for="address">Endereço</label><input type="text" name="address" required="required">
                 </div>
                 <div class="field">
-                    <label for="address2">Número/Complemento</label><input type="text" name="adddress2" required="required">
+                    <label for="address2">Número/Complemento</label><input type="text" name="address2" required="required">
                 </div>
             </div>
 
@@ -111,7 +112,16 @@
 
         <button type="submit">Cadastrar ponto de coleta</button>
     </form>
+    
+
+    
 {% endblock content %}
+
+{% block modal %}
+    {% if saved %}
+        {%include "partials/point-created.html"%}}
+    {% endif %}
+{% endblock modal %}
 
 {% block scripts %}
     <script src="/scripts/create-point.js"></script>
